# vaire

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
example/: README.md
example/.vaire/: config.toml
example/knowledge/entities/departments/: hr.md  logistics.md  platform.md
example/knowledge/entities/events/: 2026-kickoff.md
example/knowledge/entities/methods/: event-sourcing.md
example/knowledge/entities/people/: amir-khan.md  jane-doe.md
example/knowledge/entities/systems/: ingest-api.md
example/projects/atlas/2026_q2/: README.md  STATUS.md
example/projects/atlas/2026_q2/decisions/: 2026-06-08-ingest-decision.md
skills/vaire-files/: SKILL.md
skills/vaire-query-cli/: SKILL.md
skills/vaire-query-mcp/: SKILL.md
spec/: cli.md  design.md
src/: cli.rs  config.rs  error.rs  git.rs  lib.rs  main.rs
src/commands/: backlinks.rs  check.rs  index.rs  init.rs  mod.rs  refs.rs  render.rs  resolve.rs  search.rs  status.rs  suggest.rs  unresolved.rs
src/corpus/: frontmatter.rs  mod.rs  repo.rs  scan.rs  section.rs  wikilink.rs
src/embed/: cache.rs  mod.rs
src/index/: build.rs  check.rs  db.rs  mod.rs  query.rs
src/mcp/: mod.rs
src/model/: edge.rs  id.rs  mod.rs  node.rs  reference.rs
src/output/: mod.rs  style.rs
src/search/: mod.rs  vector.rs
tests/: display_name.rs  frontmatter_refs.rs  init.rs  maintain_commands.rs  mcp.rs  read_commands.rs  render.rs  schema_version.rs  scoped_ids.rs  search.rs  suggest.rs
tests/common/: mod.rs
(+1 files in other folders)
